# magpie

./: .clang-format  .gitignore  .gitmodules  meson.build
magpie/: compare.h  ebuf.c  ebuf.h  hash.c  hash.h  meson.build
magpie/collections/: array.c  array.h  hashmap.c  hashmap.h  interop.c  interop.h  list.c  list.h
magpie/math/: prime.c  prime.h
test/: hashmap_entries.h  meson.build  test_arrays.c  test_common.h  test_hashmap.c  test_lists.c
